CustomBlocks: fix stonecutter recipe display